//使用 proto3 语法 ,未指定则使用proto2
syntax = "proto2";

import "avro/character.proto";
import "avro/enums.proto";


//生成 proto 文件所在包路径
option java_package = "org.cbzmq.game.proto";

//生成 proto 文件名
option java_outer_classname = "MsgProto";

option java_multiple_files = false;

// 会生成多个对象文件，一个Message一个

message Msg {
    //自身属性
    required int64 id=1;
    required MsgHeader header = 2;
    required int64 timeStamp = 3;
    optional Code code = 4;
    repeated Character characterData = 5;
    repeated Event events = 6;
}

message Event {
    optional OneBodyEventType  oneBodyEvent = 2;
    optional TwoBodyEventType towBodyEvent = 3;
    optional Character one=4;
    optional Character other=5;
    optional float floatData=6;
    optional Vector2 vector=7;
    optional CharacterState state=8;
}



